# IAMoney

./: .dockerignore  .gitignore  DEVELOPMENT.md  Dockerfile  LICENSE  LOGGING_GUIDE.md  README.md  TELEGRAM_SETUP.md  docker-compose.yml  expenses.db  main.py  pyproject.toml  requirements.txt  run.py
app/: config.py  crud.py  db.py  llm_client.py  main.py  mcp_tools.py  models.py  schemas.py  whatsapp.py
mcp_servers/expenses_server/: README.md  __init__.py  server.py
src/: main.py
src/api/: openai_client.py  telegram_client.py  wassenger_client.py
src/bot/: chatbot.py  function_handler.py
src/config/: bot_config.py
src/http/: router.py
src/services/: telegram_polling.py
src/storage/: memory_store.py
src/utils/: app_logger.py  ngrok_tunnel.py
